--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
