--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-   
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-  
+    "react-icons": "^5.1.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.22.3",
-  
+    "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.8"
-  
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
